--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
     
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+  <link href="https://fonts.googleapis.com/css?family=Sarabun" rel="stylesheet">
 
   <link href="https://hrbze4u2btga8q7ynb5v4a-on.drv.tw/Dev/bootstrap-datepicker-thai-thai/css/datepicker.css" rel="stylesheet" media="screen">
   <script src="https://hrbze4u2btga8q7ynb5v4a-on.drv.tw/Dev/bootstrap-datepicker-thai-thai/js/bootstrap-datepicker.js"></script>
@@ -21,7 +22,13 @@
  
 
 
-    <style>  p b {width: 100px ; display: inline-block ;}  </style>
+    <style>  
+      body {  
+        font-family: 'Sarabun', sans-serif;
+      }
+      p b {width: 100px ; display: inline-block ;}  
+
+    </style>
 
   </head>
 <body>
