--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <base target="_self">
     <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>บันทึกการสอน โรงเรียนหนองวัวซอพิทยาคม</title>
+  <title> โรงเรียนหนองวัวซอพิทยาคม</title>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -34,13 +34,23 @@
 <body>
 <div class="container">
     <div id="errors" style="color:red;"></div>
+    <!-- แบบเดิม
     <div class='jumbotron '>
 
       <img src='<?= logo ?>' class='float-left' height='200'>
       <h1>โรงเรียนหนองวัวซอพิทยาคม</h1>
-      <h2>บันทึกการสอน </h2>
+      <h2>บันทึกการสอนดิจิทัล </h2>
       <h2>ประจำปีการศึกษา 2564</h2>
       <br>
+    </div>
+    -->
+    <div class="row">
+      <div class="col text-center" style="background-color:lavender;">
+      <img src='<?= logo ?>' class='float-left' height='100'>
+        <h3>โรงเรียนหนองวัวซอพิทยาคม</h3>
+        <h4>บันทึกการสอนดิจิทัล ประจำปีการศึกษา 2564</h4>
+        
+     </div>
     </div>
 
 
